navbar correct collapsing, better contact section

--- a/static/base.css
+++ b/static/base.css
@@ -57,9 +57,9 @@ body, html {
 #logo {
   background-color: #343d46;
   text-align: center;
-  padding-top: 4em;
+  padding-top: 3em;
   width: 100%;
-  height: 28em;
+  height: 26em;
 }
 
 #logoText {
@@ -70,8 +70,8 @@ body, html {
 /*https://stackoverflow.com/questions/6410730/how-to-do-a-webkit-css-endless-rotation-animation*/
 #logoGear {
   z-index: 10;
-  width: 100px;
-  height: 100px;
+  width: 6em;
+  height: 6em;
   -webkit-animation: infRotate 20s linear infinite;
   -moz-animation: infRotate 20s linear infinite;
   -ms-animation: infRotate 20s linear infinite;
@@ -155,9 +155,9 @@ body, html {
     color: #a7adba;
     font-size: 4em;
   }
-
   #logo {
-    height: 13em;
+    height: 10em;
+    padding-top: 0em;
   }
 }
 
@@ -169,7 +169,6 @@ body, html {
     color: #a7adba;
     font-size: 6em;
   }
-
   #logo {
     height: 24em;
   }
